Agregando mas diseños

--- a/Films/src/app/app.component.html
+++ b/Films/src/app/app.component.html
@@ -1,4 +1,11 @@
-<app-navbar></app-navbar>
+<nav>
+    <app-navbar></app-navbar>
+</nav>
+
+<aside>
+    <app-aside-menu></app-aside-menu>
+</aside>
+
 <router-outlet></router-outlet>
 
   
