--- a/Films/src/app/components/cambiar-password/cambiar-password.component.html
+++ b/Films/src/app/components/cambiar-password/cambiar-password.component.html
@@ -1,22 +1,26 @@
-<section>
-    <div id="cambiar-password">
-        <button (click)="mostrarFormulario=true"> Cambiar password</button>
+<div class="container mt-5">
+    <section>
+      <div id="cambiar-password">
+        <button class="btn btn-primary" (click)="mostrarFormulario=true">Cambiar contraseña</button>
         <div id="menu-cambiar-password" *ngIf="mostrarFormulario">
-            <form [formGroup]="formGroup" (ngSubmit)="confirmar()">
-                <label>Nueva password</label>
-                <input type="text" name="password" formControlName="password" value="">
-                <button type="button" (click)="cancelar()">Cancelar</button> 
-                <button type="submit" [disabled]="!formGroup.valid">Confirmar</button>
-            </form>
-            <div id="errors">
-                <section id="alertPassword">
-                    <div *ngIf="password?.invalid && (password?.dirty || password?.touched)">
-                        <div *ngIf="password?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números</div>
-                        <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div> 
-                    </div>
-                </section>
+          <form [formGroup]="formGroup" (ngSubmit)="confirmar()">
+            <div class="form-group">
+              <label>Nueva contraseña</label>
+              <input type="password" class="form-control" name="password" formControlName="password" value="">
             </div>
-            <div id="resultado-operacion"> {{result}} </div>
+            <button type="button" class="btn btn-secondary" (click)="cancelar()">Cancelar</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">Confirmar</button>
+          </form>
+          <div id="errors" class="mt-2">
+            <section id="alertPassword">
+              <div *ngIf="password?.invalid && (password?.dirty || password?.touched)">
+                <div *ngIf="password?.hasError('minDosNumeros')" class="text-danger">La contraseña debe contener mínimo 2 números</div>
+                <div *ngIf="password?.hasError('minlength')" class="text-danger">La contraseña debe contener mínimo 6 caracteres</div>
+              </div>
+            </section>
+          </div>
+          <div id="resultado-operacion" class="mt-3">{{result}}</div>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
+  </div>
