--- a/Films/src/app/components/aside-menu/aside-menu.component.css
+++ b/Films/src/app/components/aside-menu/aside-menu.component.css
@@ -1,7 +1,6 @@
 button {
     margin-left: 30px;
     margin-top: 15px;
-    background-color: rgb(129, 168, 240);
 }
 
 img{
@@ -19,11 +18,8 @@ img{
 }
 
 .fondo-desenfocado {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(82, 82, 82, 0.435);
-    z-index: 1;
+    backdrop-filter: blur(10px); /* Fondo desenfocado */
+    /* background-color: rgba(0, 0, 0, 0.5); */ /* Color de fondo sólido (ejemplo: semitransparente negro) */
   }
 
 .sizeClass {
