--- a/Films/src/app/components/cambiar-email/cambiar-email.component.html
+++ b/Films/src/app/components/cambiar-email/cambiar-email.component.html
@@ -1,21 +1,25 @@
-<section>
-    <div id="cambiar-email">
-        <button (click)="mostrarFormulario=true"> Cambiar Email</button>
+<div class="container mt-5">
+    <section>
+      <div id="cambiar-email">
+        <button class="btn btn-primary" (click)="mostrarFormulario=true">Cambiar Email</button>
         <div id="menu-cambiar-email" *ngIf="mostrarFormulario">
-            <form [formGroup]="formGroup" (ngSubmit)="confirmar()">
-                <label>Nuevo Email</label>
-                <input type="text" name="email" formControlName="email" value="">
-                <button type="button" (click)="mostrarFormulario=false">Cancelar</button> 
-                <button type="submit" [disabled]="!formGroup.valid">Confirmar</button>
-            </form>
-            <div id="errors">
-                <section id="alertEmail">
-                    <div *ngIf="email?.invalid && (email?.dirty || email?.touched)">
-                        <div *ngIf="email?.hasError('email')">El formato del email es incorrecto</div>  <!-- L -->
-                    </div>
-                </section>
+          <form [formGroup]="formGroup" (ngSubmit)="confirmar()">
+            <div class="form-group">
+              <label>Nuevo Email</label>
+              <input type="email" class="form-control" name="email" formControlName="email" value="">
             </div>
-            <div id="resultado-operacion"></div>
+            <button type="button" class="btn btn-secondary" (click)="mostrarFormulario=false">Cancelar</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">Confirmar</button>
+          </form>
+          <div id="errors" class="mt-2">
+            <section id="alertEmail">
+              <div *ngIf="email?.invalid && (email?.dirty || email?.touched)">
+                <div *ngIf="email?.hasError('email')" class="text-danger">El formato del email es incorrecto</div>
+              </div>
+            </section>
+          </div>
+          <div id="resultado-operacion" class="mt-3"></div>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
+  </div>
