--- a/Films/src/app/components/eliminar-cuenta/eliminar-cuenta.component.html
+++ b/Films/src/app/components/eliminar-cuenta/eliminar-cuenta.component.html
@@ -1,8 +1,12 @@
-<section>
-    <h3>Sobre tu Cuenta</h3>
-    <div id="eliminar-cuenta">
-        <button (click)="eliminarCuenta()">Eliminar Cuenta</button>
-        <div id="opciones"></div>
-        <div> {{result}}</div>
-    </div>
-</section>
+<div class="container mt-5">
+    <section>
+      <div id="eliminar-cuenta">
+        <button class="btn btn-danger" (click)="mostrarOpciones=true">Eliminar Cuenta</button>
+        <div id="opciones" *ngIf="mostrarOpciones">
+          <button  class="btn btn-secondary mt-3" (click)="cancelar()">Cancelar</button>
+          <button class="btn btn-primary mt-3" (click)="confirmar()">Confirmar</button>
+        </div>
+        <div class="mt-3"> {{result}} </div>
+      </div>
+    </section>
+  </div>
