--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -1,12 +1,11 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #0174BE;">
+<nav class="navbar navbar-expand-lg" style="background-color: #007bff; padding-bottom: 20px;">
     <table>
         <tr>
-            <th><button (click)="navegarInicio('inicio')"><img src="https://i.imgur.com/14DiuDu.jpg" alt="Logo boton de inicio"></button></th>
+            <th><button (click)="navegarInicio('inicio')" id="buttonInicio"><img src="https://i.imgur.com/14DiuDu.jpg" alt="Logo boton de inicio"></button></th>
             <th><app-barra-de-busqueda class = "componente-esquina"></app-barra-de-busqueda></th>
             <th><button class = "componente-esquina-boton-carrito" (click)="navegarCarrito()">🛒</button></th>
             <th><app-user-aside class = "componente-esquina-boton-user"></app-user-aside></th>
         </tr>
-        <tr><td><app-aside-menu></app-aside-menu></td></tr>
     </table>
   </nav>
   
