--- a/Films/src/app/components/user-aside/user-aside.component.html
+++ b/Films/src/app/components/user-aside/user-aside.component.html
@@ -1,4 +1,4 @@
-<button style = "background-color: #0174BE;"class="menuLateral" (click)="toggleMenu()">
+<button style = "background-color: #007bff;"class="menuLateral" (click)="toggleMenu()">
    <img src="https://cdn-icons-png.flaticon.com/128/3177/3177440.png" alt="Logo de usuario">
 </button>
 
