--- a/Films/src/app/components/aside-menu/aside-menu.component.css
+++ b/Films/src/app/components/aside-menu/aside-menu.component.css
@@ -9,31 +9,32 @@ img{
     margin-bottom: none;
 }
 
+#botonAside{
+    border: none;
+    outline: none;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-style: italic;
+}
+
 .menuLateral {
     border: none;
     outline: none;
-    color: white;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     font-style: italic;
 }
 
 .fondo-desenfocado {
-    backdrop-filter: blur(10px); /* Fondo desenfocado */
-    /* background-color: rgba(0, 0, 0, 0.5); */ /* Color de fondo sólido (ejemplo: semitransparente negro) */
-  }
-
-.sizeClass {
-    font-size: 15px;
-}
-
-.colorFondo {
-    background-color: rgb(129, 168, 240);
+    position: fixed; /* Cambiado de fixed a absolute */
+    width: 100%;
+    height: 100%;
 }
 
 .recuadro {
-    background-color: rgb(129, 168, 240);
-    margin-right: 1700px;
-    padding-bottom: 20px;
-    margin-left: 30px;
+    display: inline-block;
+    top: 100px;
+    left: 50px;
+    padding: 20px;
 }
   
