--- a/Films/src/app/components/aside-menu/aside-menu.component.html
+++ b/Films/src/app/components/aside-menu/aside-menu.component.html
@@ -1,4 +1,4 @@
-<button class="menuLateral" (click)="toggleMenu()">
+<button id="botonAside" class="menuLateral" (click)="toggleMenu()">
   <img src="https://cdn-icons-png.flaticon.com/128/8106/8106944.png" alt="Imagen de menu">
 </button>
 <div class="fondo-desenfocado" *ngIf="prendido">
