--- a/Films/src/app/components/user-aside/user-aside.component.html
+++ b/Films/src/app/components/user-aside/user-aside.component.html
@@ -9,7 +9,8 @@
         <button class="menuLateral sizeClass colorFondo" (click)="navegarRegister('registrarse')" (click)="toggleMenu()">Registrarse</button>
     </ng-container>
     <ng-container *ngIf="userService.isLoggedIn">
-        <button class="menuLateral sizeClass colorFondo" (click)="navegarPerfil('perfil')" (click)="toggleMenu()">Su Perfil</button>
+        <button class="menuLateral sizeClass colorFondo" (click)="navegarPerfil('perfil')" (click)="toggleMenu()">Perfil</button>
+        <button class="menuLateral sizeClass colorFondo" (click)="navegarBiblioteca('biblioteca')" (click)="toggleMenu()">Biblioteca</button>
         <button class="menuLateral sizeClass colorFondo" (click)="logout()" (click)="toggleMenu()">Cerrar sesion</button>
     </ng-container>
 </div>
