--- a/Films/src/app/components/carrito/carrito.component.html
+++ b/Films/src/app/components/carrito/carrito.component.html
@@ -25,11 +25,11 @@
                         <td>{{ pelicula.rating }}</td>
                         <td>{{ pelicula.precio }}</td>
                         <td>
-                            <button (click)="eliminarDelCarrito(pelicula)">Eliminar</button>
+                            <button class="btn btn-primary mt-3"  (click)="eliminarDelCarrito(pelicula)">Eliminar</button>
                         </td>
                     </tr>
                     <tr>
-                        <td><button (click)="limpiarCarrito()">Limpiar carrito</button></td>
+                        <td><button class="btn btn-primary mt-3" (click)="limpiarCarrito()">Limpiar carrito</button></td>
                     </tr>
                 </tbody>
             </table>
@@ -37,6 +37,9 @@
     </section>
     <div class="container">
         <p>Total del Carrito: {{ totalCarrito | currency: 'ARS' }}</p>
+    </div>
+    <div>
+        <button class="btn btn-primary mt-3" (click)="comprar()">Finalizar compra</button>
     </div>
 </div>
     <div *ngIf="!userService.isLoggedIn">
