--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -7,7 +7,7 @@
 
 <div *ngIf="mostrarFormularioConUltimaTarjeta" class="needs-validation">
     <form (ngSubmit)="comprarConUltimaTarjeta()">
-        <button class="btn btn-primary" type="submit">Confirmar compra </button>
+        <button class="btn btn-primary margenBoton" type="submit">Confirmar compra </button>
     </form>
 </div>
 
@@ -15,26 +15,31 @@
     <form class="needs-validation" [formGroup]="tarjetaForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label for="firstName">Nombre</label>
+            <br>
             <input type="text" name="firstName" formControlName="firstName" value="">
         </div>
         
         <div class="form-group"> 
             <label for="lastName">Apellido</label>
+            <br>
             <input type="text" name="lastName" formControlName="lastName" value="">
         </div>
 
         <div class="form-group">
             <label for="nTarjeta">Nº de tarjeta</label>
+            <br>
             <input type="text" name="nTarjeta" formControlName="nTarjeta" value="">
         </div>
 
         <div class="form-group">
             <label for="fechaVencimiento">Fecha de Vencimiento</label>
+            <br>
             <input type="text" name="fechaVencimiento" formControlName="fechaVencimiento" value="">
         </div>
 
         <div class="form-group">
             <label for="CVC">CVC</label>
+            <br>
             <input type="text" name="CVC" formControlName="CVC" value="">
         </div>
 
@@ -73,10 +78,10 @@
             <div *ngIf="fechaVencimiento.hasError('validarFechaNoExpirada')">Tarjeta vencida</div>
         </section>
 
-        <button class="btn btn-primary" type="submit" [disabled]="!tarjetaForm.valid" > Confirmar compra </button>
+        <button class="btn btn-primary margenBoton" type="submit" [disabled]="!tarjetaForm.valid" > Confirmar compra </button>
     </form>
 </div>
 
-<div>
+<div id = "exitoCompra">
     {{result}}
 </div>
