--- a/Films/src/app/components/cambiar-password/cambiar-password.component.html
+++ b/Films/src/app/components/cambiar-password/cambiar-password.component.html
@@ -6,7 +6,7 @@
           <form [formGroup]="formGroup" (ngSubmit)="confirmar()">
             <div class="form-group">
               <label>Nueva contraseña</label>
-              <input type="password" class="form-control" name="password" formControlName="password" value="">
+              <input type="password" class="form-control" name="password" formControlName="password" placeholder="Nueva contraseña" value="">
             </div>
             <button type="button" class="btn btn-secondary" (click)="cancelar()">Cancelar</button>
             <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">Confirmar</button>
