--- a/Films/src/app/components/biblioteca/biblioteca.component.css
+++ b/Films/src/app/components/biblioteca/biblioteca.component.css
@@ -5,3 +5,14 @@
     margin: 0 auto;
     width: 50%; 
 }
+
+#bibliotecaVacia{
+    font-size: 60px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#title{
+    font-size: 55px;
+    text-align: center;
+}
