--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -16,31 +16,31 @@
         <div class="form-group">
             <label for="firstName">Nombre</label>
             <br>
-            <input type="text" name="firstName" formControlName="firstName" value="">
+            <input type="text" name="firstName" formControlName="firstName" placeholder="Ingrese su nombre" value="">
         </div>
         
         <div class="form-group"> 
             <label for="lastName">Apellido</label>
             <br>
-            <input type="text" name="lastName" formControlName="lastName" value="">
+            <input type="text" name="lastName" formControlName="lastName"  placeholder="Ingrese su apellido" value="">
         </div>
 
         <div class="form-group">
             <label for="nTarjeta">Nº de tarjeta</label>
             <br>
-            <input type="text" name="nTarjeta" formControlName="nTarjeta" value="">
+            <input type="text" name="nTarjeta" formControlName="nTarjeta" placeholder="Ingrese el n° de tarjeta" value="">
         </div>
 
         <div class="form-group">
             <label for="fechaVencimiento">Fecha de Vencimiento</label>
             <br>
-            <input type="text" name="fechaVencimiento" formControlName="fechaVencimiento" value="">
+            <input type="text" name="fechaVencimiento" formControlName="fechaVencimiento" placeholder="Ejemplo 10/29" value="">
         </div>
 
         <div class="form-group">
             <label for="CVC">CVC</label>
             <br>
-            <input type="text" name="CVC" formControlName="CVC" value="">
+            <input type="text" name="CVC" formControlName="CVC"  placeholder="CVC" value="">
         </div>
 
         <div class="alert alert-danger" [class.d-none]="!errorMessage" *ngIf="errorMessage">
