--- a/Films/src/app/components/categorias/accion/accion.component.html
+++ b/Films/src/app/components/categorias/accion/accion.component.html
@@ -1,1 +1,3 @@
-<div class = "classDiv" id = "generoAccion"></div>
+<div class = "classDiv" id = "generoAccion">
+    <div id="body" class="tamanioCelda"></div>
+</div>
