--- a/Films/src/app/components/categorias/aventura/aventura.component.html
+++ b/Films/src/app/components/categorias/aventura/aventura.component.html
@@ -1,1 +1,3 @@
-<div class = "classDiv" id = "generoAventura"></div>
+<div class = "classDiv" id = "generoAventura">
+    <div id="body" class="tamanioCelda"></div>
+</div>
