--- a/Films/src/app/components/categorias/comedia/comedia.component.html
+++ b/Films/src/app/components/categorias/comedia/comedia.component.html
@@ -1,1 +1,3 @@
-<div class = "classDiv" id = "generoComedia"></div>
+<div class = "classDiv" id = "generoComedia">
+    <div id="body" class="tamanioCelda"></div>
+</div>
