--- a/Films/src/app/components/categorias/drama/drama.component.html
+++ b/Films/src/app/components/categorias/drama/drama.component.html
@@ -1,1 +1,3 @@
-<div class = "classDiv" id = "generoDrama"></div>
+<div class = "classDiv" id = "generoDrama">
+    <div id="body" class="tamanioCelda"></div>
+</div>
