--- a/Films/src/app/components/categorias/familiar/familiar.component.html
+++ b/Films/src/app/components/categorias/familiar/familiar.component.html
@@ -1,1 +1,3 @@
-<div class = "classDiv" id = "generoFamiliar"></div>
+<div class = "classDiv" id = "generoFamiliar">
+    <div id="body" class="tamanioCelda"></div>
+</div>
