--- a/Films/src/app/components/categorias/fantasia/fantasia.component.html
+++ b/Films/src/app/components/categorias/fantasia/fantasia.component.html
@@ -1,1 +1,3 @@
-<div class = "classDiv" id = "generoFantasia"></div>
+<div class = "classDiv" id = "generoFantasia">
+    <div id="body" class="tamanioCelda"></div>
+</div>
