--- a/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
+++ b/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
@@ -1,1 +1,3 @@
-<div class = "classDiv" id = "peliculasEnOferta"> </div>
+<div class = "classDiv" id = "peliculasEnOferta"> 
+    <div id="body" class="tamanioCelda"></div>
+</div>
