--- a/Films/src/app/components/categorias/accion/accion.component.css
+++ b/Films/src/app/components/categorias/accion/accion.component.css
@@ -5,9 +5,12 @@
 .classDiv {
     margin: 0 auto;
     width: 50%; 
-    margin-top: 100px;
 }
 
 td{
     text-align: center;
 }
+
+.tamanioCelda{
+    margin: -2rem;
+}  
