--- a/Films/src/app/components/navbar/navbar.component.css
+++ b/Films/src/app/components/navbar/navbar.component.css
@@ -21,8 +21,9 @@ img{
     position: absolute;
     top: 0;
     right: 0;
-    margin-top: 28px;
+    margin-top: 24px;
     margin-right: 250px;
+    font-size: 1.45rem;
 }
 
 .componente-esquina-boton-user {
