--- a/Films/src/app/components/inicio-aux/inicio-aux.component.html
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.html
@@ -1,3 +1,4 @@
 <div class = "classDiv" id = "tablaPeliculas">
-    <div id="body" class="tamanioCelda"></div>
+    <div id="body">
+    </div>
 </div>
