style: modifique la posicion en pantalla de eleccion de categorias y ofertas. Modifique el diseño de ambas cosas. alternativeoption.component

--- a/Films/src/app/app.component.html
+++ b/Films/src/app/app.component.html
@@ -1,9 +1,14 @@
 <nav>
     <app-navbar></app-navbar>
 </nav>
-<aside>
-    <app-aside-menu></app-aside-menu>
-</aside> 
+
+<main>
+    <app-alternative-options></app-alternative-options>
+</main>
+
+<footer>
+
+</footer>
 <router-outlet></router-outlet>
 
   
