--- a/Films/src/app/components/navbar/navbar.component.css
+++ b/Films/src/app/components/navbar/navbar.component.css
@@ -144,7 +144,7 @@ img{
 }
 
 .button-main-menu{
-    padding: 0.2rem;
+    padding: 0.3rem !important;
 }
 
 .img-shopping-cart{
@@ -172,10 +172,6 @@ img{
     justify-content: center;
     align-items: center;
 }
-
-
-
-
 
 
   
