feat: agregue componente de footer con las redes instagram, linkedin y github en Footer component. Fix: solucione la vista de las peliculas en menu principal en InicioAux component

--- a/Films/src/app/app.component.html
+++ b/Films/src/app/app.component.html
@@ -1,16 +1,14 @@
-<nav>
-    <app-navbar></app-navbar>
-</nav>
+<header>
+    <nav>
+        <app-navbar></app-navbar>
+    </nav>
+</header>
 
-<main>
-    <app-alternative-options></app-alternative-options>
+<main class="content-wrapper">
+    <router-outlet></router-outlet>
 </main>
 
 <footer>
-
+    <app-footer></app-footer>
 </footer>
-<router-outlet></router-outlet>
-
-  
-  
 
