--- a/Films/src/app/components/inicio-aux/inicio-aux.component.css
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.css
@@ -7,8 +7,8 @@ table {
 }
 
 .classDiv {
-    margin: 0 auto;
-    width: 60%;
+   display: flex;
+   justify-content: center;
 }
 
 /* Estilos para el recuadro de las películas */
