--- a/Films/src/app/components/login/login.component.css
+++ b/Films/src/app/components/login/login.component.css
@@ -1,3 +1,6 @@
-*{
-    text-align: center;
-}
+.no-border {
+    border-top: none; /* Quitar borde superior */
+    border-right: none; /* Quitar borde derecho */
+    border-left: none; /* Quitar borde izquierdo */
+    border-radius: 0; /* Eliminar bordes redondeados si es necesario */
+  }
