--- a/Films/src/app/components/login/login.component.html
+++ b/Films/src/app/components/login/login.component.html
@@ -1,28 +1,50 @@
-<form class="needs-validation" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="text" class="form-control" id="email" name="email" formControlName="email" required [ngClass]="{ 'is-invalid': email?.invalid && (email?.dirty || email?.touched) }">
-    <div class="invalid-feedback">
-      <div *ngIf="email?.hasError('required')">El email es requerido</div>
-      <div *ngIf="email?.hasError('email')">El formato del email es incorrecto</div>
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="row justify-content-center">
+    <div class="col-md-15"> <!-- Aumenta el tamaño de la columna -->
+      <div class="card shadow-lg" style="border-radius: 1rem; width: 100%; padding: 20px;"> <!-- Asegúrate de que la tarjeta sea más ancha -->
+        <div class="card-body p-5"> <!-- Aumenta el padding -->
+          <h2 class="card-title mb-4 text-center">INICIAR SESIÓN</h2>
+          <form class="needs-validation" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+            <div class="form-group mb-4">
+              <label for="email" class="label-spacing">Email</label>
+              <input type="text" class="form-control no-border" id="email" name="email" formControlName="email" required 
+                [ngClass]="{ 'is-invalid': loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched) }">
+              <div class="invalid-feedback">
+                <div *ngIf="loginForm.get('email')?.hasError('required')">El email es requerido</div>
+                <div *ngIf="loginForm.get('email')?.hasError('email')">El formato del email es incorrecto</div>
+              </div>
+            </div>
+
+            <div class="form-group mb-4">
+              <label for="password" class="label-spacing">Contraseña</label>
+              <input type="password" class="form-control no-border" id="password" name="password" formControlName="password" required 
+                [ngClass]="{ 'is-invalid': loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched) }">
+              <div class="invalid-feedback">
+                <div *ngIf="loginForm.get('password')?.hasError('required')">La contraseña es requerida</div>
+                <div *ngIf="loginForm.get('password')?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div>
+              </div>
+            </div>
+
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid" style="width: 100%;">Iniciar Sesión</button>
+            </div>
+
+            <div class="text-center mt-3">
+              <a [routerLink]="['/registrarse']" class="text-muted text-primary">
+                ¿No tienes una cuenta? <span class="text-primary">Regístrate</span>
+              </a>
+            </div>
+
+            <div class="alert alert-danger mt-3" *ngIf="errorMessage">
+              {{ errorMessage }}
+            </div>
+            <div class="alert alert-success mt-3" *ngIf="successMessage">
+              {{ successMessage }}
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="form-group">
-    <label for="password">Contraseña</label>
-    <input type="password" class="form-control" id="password" name="password" formControlName="password" required [ngClass]="{ 'is-invalid': password?.invalid && (password?.dirty || password?.touched) }">
-    <div class="invalid-feedback">
-      <div *ngIf="password?.hasError('required')">La contraseña es requerida</div>
-      <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div>
-    </div>
-  </div>
-
-  <button type="button" class="btn btn-primary" (click)="onSubmit()">Enviar</button>
-
-  <div class="alert alert-danger" [class.d-none]="!errorMessage" *ngIf="errorMessage">
-    {{ errorMessage }}
-  </div>
-  <div class="alert alert-success" [class.d-none]="!successMessage" *ngIf="successMessage">
-    {{ successMessage }}
-  </div>
-</form>
+</div>
