--- a/Films/src/app/components/register/register.component.html
+++ b/Films/src/app/components/register/register.component.html
@@ -1,71 +1,86 @@
-<form class="needs-validation" [formGroup]="userForm"  (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="">Nombre</label>
-      <input type="text" name="firstName" formControlName="firstName" placeholder="Ingrese su nombre" value="">
-    </div>
-   
-    <div class="form-group"> 
-      <label for="">Apellido</label>
-      <input type="text" name="lastName" formControlName="lastName" placeholder="Ingrese su apellido" value="">
-    </div>
-    
-    <div class="form-group">
-      <label for="">DNI</label>
-      <input type="text" name="DNI" formControlName="DNI" placeholder="Ingrese su DNI" value="">
-    </div>
-    
-    <div class="form-group">
-      <label for="">Email</label>
-      <input type="text" name="email" formControlName="email" placeholder="Ingrese su email" value="">
-    </div>
-    
-    <div class="form-group">
-      <label for="">Direccion</label>
-      <input type="text" name="adress" formControlName="address" placeholder="Ingrese la direccion" value="">
-    </div>
-    
-    <div class="form-group">
-      <label for="">Contraseña</label>
-      <input type="password" name="password" formControlName="password" placeholder="Ingrese su contraseña" value="">
-    </div>
-    
-    <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid">Registrarse</button>
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="row justify-content-center">
+    <div class="col-md-15"> <!-- Volvemos a la col-md-8 para conservar el tamaño de la card -->
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title mb-4 mt-3 text-center">REGISTRARSE</h2>
+          <form class="needs-validation" [formGroup]="userForm" (ngSubmit)="onSubmit()">
+            
+            <!-- Primera fila: Nombre y Apellido -->
+            <div class="row">
+              <div class="col-md-6 mb-5">
+                <label for="firstName" class="form-label label-spacing">Nombre</label>
+                <input type="text" class="form-control no-border" id="firstName" name="firstName" formControlName="firstName" placeholder="Ingrese su nombre" required>
+                <span class="text-danger" *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)">
+                  <div *ngIf="firstName?.hasError('required')">El nombre es requerido</div>
+                  <div *ngIf="firstName?.hasError('soloLetras')">El nombre debe contener solo letras</div>
+                </span>
+              </div>
+              <div class="col-md-6 mb-5">
+                <label for="lastName" class="form-label label-spacing">Apellido</label>
+                <input type="text" class="form-control no-border" id="lastName" name="lastName" formControlName="lastName" placeholder="Ingrese su apellido" required>
+                <span class="text-danger" *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)">
+                  <div *ngIf="lastName?.hasError('required')">El apellido es requerido</div>
+                  <div *ngIf="lastName?.hasError('soloLetras')">El apellido debe contener solo letras</div>
+                </span>
+              </div>
+            </div>
 
-    <section id="alertName" class="alert alert-danger" *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)">
-          <div *ngIf="firstName?.hasError('required')">El nombre es requerido</div> <!-- L -->
-          <div *ngIf="firstName?.hasError('soloLetras')">El nombre debe contener solo letras</div> <!-- L -->
-    </section>
+            <!-- Segunda fila: DNI y Email -->
+            <div class="row">
+              <div class="col-md-6 mb-5">
+                <label for="dni" class="form-label label-spacing">DNI</label>
+                <input type="text" class="form-control no-border" id="dni" name="dni" formControlName="DNI" placeholder="Ingrese su DNI" required>
+                <span class="text-danger" *ngIf="dni?.invalid && (dni?.dirty || dni?.touched)">
+                  <div *ngIf="dni?.hasError('required')">El DNI es requerido</div>
+                  <div *ngIf="dni?.hasError('soloNumeros')">El DNI debe contener solo números</div>
+                  <div *ngIf="dni?.hasError('minlength') || dni?.hasError('maxlength')">El DNI debe contener 8 caracteres</div>
+                </span>
+              </div>
+              <div class="col-md-6 mb-5">
+                <label for="email" class="form-label label-spacing">Email</label>
+                <input type="email" class="form-control no-border" id="email" name="email" formControlName="email" placeholder="Ingrese su email" required>
+                <span class="text-danger" *ngIf="email?.invalid && (email?.dirty || email?.touched)">
+                  <div *ngIf="email?.hasError('required')">El email es requerido</div>
+                  <div *ngIf="email?.hasError('email')">El formato del email es incorrecto</div>
+                </span>
+              </div>
+            </div>
 
-    <section id="alertLastName" class="alert alert-danger" *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)">
-          <div *ngIf="lastName?.hasError('required')">El apellido es requerido</div> <!-- L -->
-          <div *ngIf="lastName?.hasError('soloLetras')">El apellido debe contener solo letras</div> <!-- L -->
-    </section>
+            <!-- Tercera fila: Dirección y Contraseña -->
+            <div class="row">
+              <div class="col-md-6 mb-5">
+                <label for="address" class="form-label label-spacing">Dirección</label>
+                <input type="text" class="form-control no-border" id="address" name="address" formControlName="address" placeholder="Ingrese su dirección" required>
+                <span class="text-danger" *ngIf="address?.invalid && (address?.dirty || address?.touched)">
+                  <div *ngIf="address?.hasError('required')">La dirección es requerida</div>
+                </span>
+              </div>
+              <div class="col-md-6 mb-5">
+                <label for="password" class="form-label label-spacing">Contraseña</label>
+                <input type="password" class="form-control no-border" id="password" name="password" formControlName="password" placeholder="Ingrese su contraseña" required>
+                <span class="text-danger" *ngIf="password?.invalid && (password?.dirty || password?.touched)">
+                  <div *ngIf="password?.hasError('required')">La contraseña es requerida</div>
+                  <div *ngIf="password?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números</div>
+                  <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div>
+                </span>
+              </div>
+            </div>
+            
+            <!-- Botón de registro -->
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid" style="width: 100%;">Registrarse</button>
+            </div>
+            
+            <div class="text-center mt-3">
+              <a [routerLink]="['/login']" class="text-muted text-primary">
+                ¿Ya tienes una cuenta? <span class="text-primary">Inicia sesión.</span>
+              </a>
+            </div>
 
-    <section id="alertDNI" class="alert alert-danger" *ngIf="dni?.invalid && (dni?.dirty || dni?.touched)">
-          <div *ngIf="dni?.hasError('required')">El DNI es requerido</div>  <!-- L -->
-          <div *ngIf="dni?.hasError('soloNumeros')">El DNI debe contener solo números</div>  <!-- L -->
-          <div *ngIf="dni?.hasError('minlength') || dni?.hasError('maxlength')">El DNI debe contener 8 caracteres</div>  <!-- L -->
-    </section>
-
-    <section id="alertEmail">
-        <div *ngIf="email?.invalid && (email?.dirty || email?.touched)">
-          <div *ngIf="email?.hasError('required')">El email es requerido</div>  <!-- L -->
-          <div *ngIf="email?.hasError('email')">El formato del email es incorrecto</div>  <!-- L -->
+          </form>
         </div>
-    </section>
-
-    <section id="alertAddress" class="alert alert-danger" *ngIf="address?.invalid && (address?.dirty || address?.touched)">
-          <div *ngIf="address?.hasError('required')">La dirección es requerida</div>
-    </section>
-    
-    <section id="alertPassword" class="alert alert-danger" *ngIf="password?.invalid && (password?.dirty || password?.touched)">
-      <div *ngIf="password?.hasError('required')">La contraseña es requerida</div> <!-- L -->
-      <div *ngIf="password?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números</div> <!-- L -->
-      <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div> <!-- L -->
-    </section>
-
-    <section id="registroCorrectoONo">
-      {{mensajeRegistro}}
-    </section>
-
-</form>
+      </div>
+    </div>
+  </div>
+</div>
