fix: solucione problema al cambiar manualmente la id/rank de la pelicula en la visualizacion de su ficha. film-detail.component

--- a/Films/src/app/components/film-detail/film-detail.component.html
+++ b/Films/src/app/components/film-detail/film-detail.component.html
@@ -1,3 +1,4 @@
-<div id = "film">
 
+<div *ngIf = "movie" class = "recuadroFilm">
+    <img alt = "Imagen No Disponible" [src] = "movie.image">
 </div>
